--- a/TwitchApplication/TwitchApplication/TwitchApplication.csproj
+++ b/TwitchApplication/TwitchApplication/TwitchApplication.csproj
@@ -96,6 +96,7 @@
     <Content Include="assets\js\jquery-2.1.1.min.js" />
     <Content Include="assets\js\jquery-ui-1.10.4.custom.min.js" />
     <Content Include="default.aspx" />
+    <Content Include="views\follows.aspx" />
     <Content Include="views\games.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -109,6 +110,13 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="views\follows.aspx.cs">
+      <DependentUpon>follows.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="views\follows.aspx.designer.cs">
+      <DependentUpon>follows.aspx</DependentUpon>
+    </Compile>
     <Compile Include="views\games.aspx.cs">
       <DependentUpon>games.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
